[package]
name = "ask"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
reqwest = { version = "0.11.18", features = [
    "json",
    "rustls-tls",
    "stream"
], default-features = false }
tokio = { version = "1.29.1", features = ["full"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
thiserror = "1.0.43"
url = "2.4.0"
derive_builder = "0.12.0"
eventsource-stream = "0.2.3"
futures = "0.3.28"
futures-util = "0.3.28"
confy = "0.5.1"
dialoguer = "*"
rustyline = "*"
[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
assert_fs = "1.0.13"
